Fix close button and align live buttons

--- a/style.css
+++ b/style.css
@@ -190,7 +190,7 @@ nav .time {
 }
 
 .popup-menu > i {
-  font-size: 20px;
+  font-size: 30px;
   text-align: right;
 }
 
@@ -576,7 +576,6 @@ footer a {
 .popup-menu img {
   width: 100%;
   border-radius: 2%;
-  border: 1px solid black;
 }
 
 .popup-container .popup-menu > i {
@@ -592,6 +591,7 @@ footer a {
   position: absolute;
   top: 15px;
   right: 15px;
+  color: white;
 }
 
 .popup-menu h2 {
@@ -643,6 +643,11 @@ footer a {
   z-index: 1000;
   overflow-y: auto;
   padding: 50px 20px;
+}
+
+.popup-menu > ul > li > button {
+  border: none;
+  outline: none;
 }
 
 .popup-menu > ul > li > .btn-hover {
@@ -920,30 +925,33 @@ footer a {
   }
 
   .popup-menu {
-    max-width: 600px;
+    max-width: 650px;
     position: relative;
   }
 
   #close-popup {
+    display: block;
     align-self: flex-end;
     padding: 4px;
-    background-color: #c1c7d0;
+    background-color: #ebecf0;
+    color: #c6c4c4;
     border-radius: 4px;
     cursor: pointer;
   }
 
   .popup-menu img {
     object-fit: cover;
-    border: 1px solid black;
   }
 
   .popup-menu .popup-buttons-desktop > button {
     background: #36b37f;
-    width: 110px;
-    height: 50px;
     border-radius: 12px;
     color: white;
     font-size: 15px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 5px 10px;
   }
 
   .popup-header {
@@ -959,6 +967,7 @@ footer a {
     font-size: 24px;
     line-height: 30px;
     color: #172b4d;
+    width: 50%;
   }
 
   .popup-menu > ul > li > .btn-hover {
